--- a/frontends/web2/package.json
+++ b/frontends/web2/package.json
@@ -15,7 +15,8 @@
         "immutable": "^5.0.2",
         "jotai": "^2.10.1",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-use-websocket": "^4.10.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.13.0",
