--- a/frontends/web2/package.json
+++ b/frontends/web2/package.json
@@ -16,7 +16,8 @@
         "jotai": "^2.10.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-use-websocket": "^4.10.1"
+        "react-use-websocket": "^4.10.1",
+        "use-local-storage-state": "^19.5.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.13.0",
